fix/convert properly and classify according to color

--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,8 @@
   "name": "Aviation Data Scraper",
   "version": "1.0",
   "description": "Intercepts and scrapes spoofing and jamming data from aviation APIs",
-  "permissions": [
-    "storage",
-    "activeTab",
-    "scripting"
-  ],
-  "host_permissions": [
-    "https://spoofing.skai-data-services.com/*"
-  ],
+  "permissions": ["storage", "activeTab", "scripting"],
+  "host_permissions": ["https://spoofing.skai-data-services.com/*"],
   "background": {
     "service_worker": "background.js"
   },
@@ -21,7 +15,7 @@
   "content_scripts": [
     {
       "matches": ["https://spoofing.skai-data-services.com/*"],
-      "js": ["content.js"],
+      "js": ["content.js", "jamming-converter.js"],
       "run_at": "document_start",
       "all_frames": true
     }
