--- a/manifest.json
+++ b/manifest.json
@@ -15,9 +15,20 @@
   "content_scripts": [
     {
       "matches": ["https://spoofing.skai-data-services.com/*"],
-      "js": ["content.js", "jamming-converter.js"],
+      "js": [
+        "h3-js.umd.js",
+        "jszip.min.js",
+        "content.js",
+        "jamming-converter.js"
+      ],
       "run_at": "document_start",
       "all_frames": true
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["popup.js"],
+      "matches": ["<all_urls>"]
     }
   ]
 }
